Kubernetes/Canary/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress
  namespace: st-aline-canary
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: bank-ms-a
            port:
              number: 8096
        path: /
        pathType: Prefix
